made some improvements to the appearance

--- a/about.html
+++ b/about.html
@@ -30,21 +30,25 @@
                 <picture>
                     <source media="(max-width:600px)" srcset="images/darnell-really-small.jpg">
                     <source media="(min-width:600px)" srcset="images/darnell-small.jpg">
-                    <img src="images/darnell.jpg" alt="A picture of Darnell Shipp and his wife">
+                    <img class="darnell-img" src="images/darnell.jpg" alt="A picture of Darnell Shipp and his wife">
                 </picture>
                 <div class="darnell-div">
-                    <p class="darnell-p">
-                        I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a maintenance planner for the world's largest nuclear test reactor.
-                        <br>
-                        <br>
-                        I'm a constitutional conservative. My support lies with the right to life, protecting Idaho family values, and parental rights. It is my belief that in regards to education, money should follow the child and Common Core should be done away with.
-                        <br>
-                        <br>
-                        A large reason that I am running for office is my concern surrounding government outreach, specifically at the federal level. Vaccine mandates are a threat; they force employees throughout Idaho to choose between bodily autonomy and a paycheck.
-                        <br>
-                        <br>
-                        My beautiful wife, Lucy, and I live in Egin. I am the father of seven and a grandfather of twenty-five. This is one of the most exciting times in the history of this world to be alive. It is a time to stand for freedom; for us, for our children, and for our grandchildren.
-                    </p>
+                    <div>
+                        <div class="darnell-div-header"><span class="fa fa-caret-down"></span><h2>Work Life</h2></div>
+                        <div class="value-info"><p>I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a maintenance planner for the world's largest nuclear test reactor.</p></div>
+                    </div>
+                    <div>
+                        <div class="darnell-div-header"><span class="fa fa-caret-down"></span><h2>Where I Stand</h2></div>
+                        <div class="value-info"><p>I'm a constitutional conservative. My support lies with the right to life, protecting Idaho family values, and parental rights. It is my belief that in regards to education, money should follow the child and Common Core should be done away with.</p></div>
+                    </div>
+                    <div>
+                        <div class="darnell-div-header"><span class="fa fa-caret-down"></span><h2>Why I'm Running</h2></div>
+                        <div class="value-info"><p>A large reason that I am running for office is my concern surrounding government outreach, specifically at the federal level. Vaccine mandates are a threat; they force employees throughout Idaho to choose between bodily autonomy and a paycheck.</p></div>
+                    </div>
+                    <div>
+                        <div class="darnell-div-header"><span class="fa fa-caret-down"></span><h2>Family Life</h2></div>
+                        <div class="value-info"><p>My beautiful wife, Lucy, and I live in Egin. I am the father of seven and a grandfather of twenty-five. This is one of the most exciting times in the history of this world to be alive. It is a time to stand for freedom; for us, for our children, and for our grandchildren.</p></div>
+                    </div>
                 </div>
             </div>
         </main>
