--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <main class="main">
             <div class="hero-container">
                 <picture>
-                    <source media="(max-width:600px)" srcset="images/patriotic-small.jpg">
-                    <source media="(max-width:960px)" srcset="images/patriotic-medium.jpg">
-                    <img src="images/patriotic.jpg" alt="Patriotic eagle flying in front of a flowing flag of the United States of America">
+                    <source media="(max-width:600px)" srcset="images/patriotic-small.jpg 600w">
+                    <source media="(max-width:960px)" srcset="images/patriotic-medium.jpg 960w">
+                    <img src="images/patriotic.jpg" alt="Patriotic eagle flying in front of a flowing flag of the United States of America" width="600" height="450">
                 </picture>
                 <div class="hero-text">
                     <div class="hero-buttons">
