added google analytics page tag

--- a/donate.html
+++ b/donate.html
@@ -9,6 +9,15 @@
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/css.css"/>
         <script src="js/donate.js" type="module"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M7ZWNB1Z2C"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-M7ZWNB1Z2C');
+        </script>
     </head>
     <body>
         <header class="header" id="main-header"></header>
