--- a/donate.html
+++ b/donate.html
@@ -33,8 +33,9 @@
                 <li class="nav-item"><a href="about.html">About Me</a></li>
             </ul>
         </nav>
-        <main class="main">
-            <iframe src="https://rallypay.com/covers/8fX1xcjsKLq/contribute" title="Donate to Darnell's Campaign"></iframe>
+        <main class="donations">
+            <script src="https://rallypay.com/v1/widget_token_donate.js" type="text/javascript"></script>
+            <iframe width="100%" height="100%" frameborder="0" id="iframeid" name="https://rallypay.com/covers/8fX1xcjsKLq/widget_tokenDonate" src=""></iframe>
         </main>
         <footer class="footer" id="main-footer"></footer>
     </body>
