--- a/thankyou.html
+++ b/thankyou.html
@@ -33,7 +33,7 @@
                 <li class="nav-item"><a href="about.html">About Me</a></li>
             </ul>
         </nav>
-        <main class="donations">
+        <main class="thankYou">
             <h1>Thank you for your donation!</h1>
         </main>
         <footer class="footer" id="main-footer"></footer>
