fixed image on about page

--- a/about.html
+++ b/about.html
@@ -36,11 +36,7 @@
         <main class="main">
             <div class="darnell-main">
                 <h1 class="darnell-h1">Put SHIPP in LeaderSHIPP</h1>
-                <picture>
-                    <source media="(max-width:600px)" srcset="images/darnell-really-small.jpg">
-                    <source media="(min-width:600px)" srcset="images/darnell-small.jpg">
-                    <img class="darnell-img" src="images/darnell.jpg" alt="A picture of Darnell Shipp and his wife">
-                </picture>
+                <img class="darnell-img" src="images/darnell-about-him.jpg" alt="A picture of Darnell Shipp and his wife" height="710" width="710">
                 <div class="darnell-div">
                     <div>
                         <div class="darnell-div-header"><span class="fa fa-caret-down"></span><h2>Work Life</h2></div>
