--- a/donate.html
+++ b/donate.html
@@ -35,6 +35,7 @@
         </nav>
         <main class="donations">
             <script src="https://rallypay.com/v1/widget_token_donate.js" type="text/javascript"></script>
+            <!-- / RallyPay donation meter BEGIN -->
             <iframe width="100%" height="100%" frameborder="0" id="iframeid" name="https://rallypay.com/covers/8fX1xcjsKLq/widget_tokenDonate" src=""></iframe>
         </main>
         <footer class="footer" id="main-footer"></footer>
