fixed thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Donation page for Darnell Shipp's candidacy"/>
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/css.css"/>
-        <script src="js/donate.js" type="module"></script>
+        <script src="js/thankYou.js" type="module"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-M7ZWNB1Z2C"></script>
         <script>
@@ -34,7 +34,10 @@
             </ul>
         </nav>
         <main class="thankYou">
-            <h1>Thank you for your donation!</h1>
+            <div>
+                <img src="images/darnell-patriotic.jpg" width="800" height="600">
+                <h1>Thank you for your donation!</h1>
+            </div>
         </main>
         <footer class="footer" id="main-footer"></footer>
     </body>
