--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>About Me | Darnell for Idaho</title>
-        <link rel="icon" type="image/x-icon" href="images/main-favicon.png">
+        <link rel="icon" type="image/x-icon" href="/images/main-favicon.png">
         <meta name="description" content="Page describing Darnell Shipp"/>
-        <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/css.css"/>
-        <script src="js/about.js" type="module"></script>
+        <link rel="stylesheet" href="/css/normalize.css"/>
+        <link rel="stylesheet" href="/css/style.min.css"/>
+        <script src="/js/about.js" type="module"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-M7ZWNB1Z2C"></script>
         <script>
@@ -28,15 +28,15 @@
         </div>
         <nav class="nav">
             <ul class="main-nav">
-                <li class="nav-item"><a href="index.html">Home</a></li>
-                <li class="nav-item"><a href="donate.html">Donate</a></li>
-                <li class="nav-item active"><a href="about.html">About Me</a></li>
+                <li class="nav-item"><a href="/index.html">Home</a></li>
+                <li class="nav-item"><a href="/donate/index.html">Donate</a></li>
+                <li class="nav-item active"><a href="/about/index.html">About Me</a></li>
             </ul>
         </nav>
         <main class="main">
             <div class="darnell-main">
                 <h1 class="darnell-h1">Put SHIPP in LeaderSHIPP</h1>
-                <img class="darnell-img" src="images/darnell-about-him.jpg" alt="A picture of Darnell Shipp and his wife" height="710" width="710">
+                <img class="darnell-img" src="/images/darnell-about-him.jpg" alt="A picture of Darnell Shipp and his wife" height="710" width="710">
                 <div class="darnell-div">
                     <div>
                         <div class="darnell-div-header"><span class="fa fa-caret-down"></span><h2>Work Life</h2></div>
