--- a/public/404.html
+++ b/public/404.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
         <main class="main">
-          <h1>404: Page Not Found</h1>
+          <h1 class="center-header">404: Page Not Found</h1>
         </main>
         <footer class="footer" id="main-footer"></footer>
     </body>
