--- a/public/thank-you/index.html
+++ b/public/thank-you/index.html
@@ -36,7 +36,7 @@
         <main class="thankYou">
             <div>
                 <img src="/images/darnell-patriotic.jpg" width="800" height="600">
-                <h1>Thank you for your donation!</h1>
+                <h1 id="donation-text">Thank you for your donation!</h1>
             </div>
         </main>
         <footer class="footer" id="main-footer"></footer>
