--- a/public/404.html
+++ b/public/404.html
@@ -28,9 +28,9 @@
         </div>
         <nav class="nav">
             <ul class="main-nav">
-                <li class="nav-item active"><a href="/index.html">Home</a></li>
-                <li class="nav-item"><a href="/donate/index.html">Donate</a></li>
-                <li class="nav-item"><a href="/about/index.html">About Me</a></li>
+                <li class="nav-item active"><a href="/">Home</a></li>
+                <li class="nav-item"><a href="/donate">Donate</a></li>
+                <li class="nav-item"><a href="/about">About Me</a></li>
             </ul>
         </nav>
         <main class="main">
