added title metdata

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Home | Darnell for Idaho</title>
         <link rel="icon" type="image/x-icon" href="/images/main-favicon.png">
+        <meta name="title" content="darnellshipp4idaho"
         <meta name="description" content="darnellshipp4idaho home page for Darnell R. Shipp's candidacy for Idaho Senate"/>
         <link rel="stylesheet" href="/css/normalize.css"/>
         <link rel="stylesheet" href="/css/style.min.css"/>
